Update: index | Add resume

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Hasarindu Perera</h1>
             <h2>Student | Machine Learning Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="pdfs/ScholarX_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -113,6 +113,9 @@
                         </li>
                         <li>
                             <a href="https://twitter.com/hasarinduperera" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.kaggle.com/hasarinduperera"><img src="https://external-content.duckduckgo.com/ip3/www.kaggle.com.ico" height="18px" width="18px"></a>
                         </li>
                     </ul>
                 </div>
